# lindsey_learn_open_source_101-project

./: .coveragerc  .gitignore  .readthedocs.yml  AUTHORS.rst  CLAUDE.md  LICENSE.txt  README.rst  best-practices.md  codecov.yml  mise.toml  pyproject.toml  release-history.rst
.github/workflows/: main.yml
.mise/tasks/: utils.py
docs/source/: conf.py
docs/source/_static/css/: custom-style.css
docs/source/api/lindsey_learn_open_source_101/: __init__.rst  api.rst  math_utils.rst
lindsey_learn_open_source_101/: api.py  math_utils.py  paths.py
tests/: all.py  test_api.py
